# Intra_hemorrhage_detection

./: .dvcignore  .gitignore  MLproject  Makefile  README.md  TASK_ASSIGNMENT.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml
api/: main.py  schemas.py
api/routes/: predict.py
configs/model/: efficientnet.yaml  resnet.yaml
configs/training/: default.yaml  fast_dev.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_dicom_visualization.ipynb  02_preprocessing_deep_dive.ipynb
paper_writing/: Makefile  main.tex
paper_writing/bibliography/: references.bib
paper_writing/sections/: abstract.tex  conclusion.tex  experiments.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
reports/metrics/: test_metrics.json
reports/paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex
reports/paper/bibliography/: references.bib
reports/paper/sections/: abstract.tex  appendix.tex  conclusion.tex  experiments.tex  introduction.tex  methodology.tex  results.tex  (+1 more)
scripts/: evaluate.py  extract_features.py  gradcam.py  plot_curves.py  predict.py  prepare_data.py  train.py  train_sequence.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  schedulers.py  sequence_model.py  train.py
src/monitoring/: drift_detection.py
src/visualization/: visualize.py
tests/: test_data.py  test_models.py  test_preprocessing.py
(+9 files in other folders)
