[metadata]
name = ich-detection
version = 0.1.0
author = ICH Detection Team
description = Detection and classification of intracranial hemorrhage from CT scans
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
markers =
    slow: marks tests as slow (deselect with -m "not slow")
    integration: marks tests as integration tests

[coverage:run]
source = src
omit =
    tests/*
    notebooks/*

[coverage:report]
show_missing = true
fail_under = 60
